Rename class tags and ids to prevent overlap

--- a/frontend/public/style/aboutUs.css
+++ b/frontend/public/style/aboutUs.css
@@ -188,7 +188,7 @@ body {
     transform: translateY(10px);
 }
 
-#history-section {
+#restaurant-section {
     width: 100%;
     height: 50%;
     display: flex;
@@ -200,13 +200,13 @@ body {
 }
 
 @media screen and (max-width: 860px) {
-    #history-section {
+    #restaurant-section {
         flex-direction: column;
         justify-content: space-between;
     }
 }
 
-.history-image {
+.restaurant-image {
     position: absolute;
     top: 0;
     left: 0;
@@ -216,7 +216,7 @@ body {
 }
 
 @media screen and (max-width: 860px) {
-    .history-image {
+    .restaurant-image {
         position: relative;
         width: 100%;
         height: 40%;
@@ -224,19 +224,19 @@ body {
 }
 
 @media screen and (max-width: 747px) {
-    .history-image {
+    .restaurant-image {
         height: 35%;
     }
 }
 
 @media screen and (max-width: 644px) {
-    .history-image img {
+    .restaurant-image img {
         position: absolute;
         right: -220px;
     }
 }
 
-.history-info {
+.restaurant-info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -249,7 +249,7 @@ body {
 }
 
 @media screen and (max-width: 1353px) {
-    .history-info {
+    .restaurant-info {
         margin-left: 400px;
         width: 60%;
         background: #ffffff99;
@@ -258,26 +258,26 @@ body {
 }
 
 @media screen and (max-width: 1238px) {
-    .history-info {
+    .restaurant-info {
         margin-left: 340px;
         width: 100%;
     }
 }
 
 @media screen and (max-width: 1111px) {
-    .history-info {
+    .restaurant-info {
         margin-left: 270px;
     }
 }
 
 @media screen and (max-width: 910px) {
-    .history-info {
+    .restaurant-info {
         margin-left: 150px;
     }
 }
 
 @media screen and (max-width: 860px) {
-    .history-info {
+    .restaurant-info {
         margin: 0px 0px 0px 0px !important;
         padding: 0px 40px 0px 40px !important;
         width: 100%;
@@ -287,36 +287,36 @@ body {
 }
 
 @media screen and (max-width: 747px) {
-    .history-info {
+    .restaurant-info {
         height: 65%;
     }
 }
 
-.history-info h2 {
+.restaurant-info h2 {
     color: #313344;
     font-size: 40pt;
     text-align: left;
 }
 
 @media screen and (max-width: 860px) {
-    .history-info h2 {
+    .restaurant-info h2 {
         text-align: center;
     }
 }
 
-.history-info p {
+.restaurant-info p {
     color: #313344;
     font-size: 14pt;
     text-align: left;
 }
 
 @media screen and (max-width: 860px) {
-    .history-info p {
+    .restaurant-info p {
         text-align: center;
     }
 }
 
-.history-info a {
+.restaurant-info a {
     background-color: #313344;
     color: white;
     width: 180px;
@@ -326,7 +326,7 @@ body {
     box-shadow: rgb(77, 38, 38) 0px 20px 30px -10px;
 }
 
-.history-info a:hover {
+.restaurant-info a:hover {
     background: #404140;
     color: white;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
